Fix slightly offset mods screen link positioning, backport of #9860 (#9861)
Co-authored-by: Dennis C <11262040+XFactHD@users.noreply.github.com>